# DracoNodelet

./: .gitignore  README.md  initialize_procedure.txt  load_linkage_table.sh  load_name.sh  note.txt
AnkleKneeController/: <Plug>(multiple-cursors-apply)<Plug>(multiple-cursors-detect)  CMakeLists.txt  mainpage.dox  manifest.xml  save_data.sh
AnkleKneeController/ExperimentDataCheck/: command.txt  debug_bus_voltage.txt  debug_knee_effort.txt  debug_knee_q.txt  debug_knee_qdot.txt  input.txt  output.txt  time.txt
AnkleKneeController/include/AnkleKneeInterface/: AnkleKneeInterface.hpp
AnkleKneeController/src/: AnkleKneeInterface.cpp
AnkleKneeNodelet/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugins.xml
AnkleKneeNodelet/config/: env.yaml  joint_chirp.yaml  joint_config.yaml  joint_sinusoidal.yaml  linkage_model.yaml
AnkleKneeNodelet/include/AnkleKneeNodelet/: ankle_knee_nodelet.hpp
AnkleKneeNodelet/launch/: ankle_knee_nodelet.launch
AnkleKneeNodelet/src/: ankle_knee_nodelet.cpp
DracoNodelet/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugins.xml
DracoNodelet/config/: joint_config.yaml
DracoNodelet/include/DracoNodelet/: DracoNodelet.hpp
DracoNodelet/launch/: draco_nodelet.launch
DracoNodelet/src/: DracoNodelet.cpp
DracoWalkingNodelet/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugins.xml
DracoWalkingNodelet/include/DracoWalkingNodelet/: DracoWalkingNodelet.hpp
DracoWalkingNodelet/launch/: draco_walking_nodelet.launch
DracoWalkingNodelet/src/: DracoWalkingNodelet.cpp
HipController/: CMakeLists.txt  mainpage.dox  manifest.xml
HipController/include/HipInterface/: HipInterface.hpp
HipController/src/: HipInterface.cpp
HipNodelet/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet_plugins.xml
HipNodelet/config/: joint_config.yaml  linkage_model.yaml
HipNodelet/include/HipNodelet/: hip_nodelet.hpp
HipNodelet/launch/: hip_nodelet.launch
HipNodelet/src/: hip_nodelet.cpp
MassId/: one_dof_learning.py  untitled.m
MassId/data/: debug_bus_voltage.txt  debug_current_msr.txt  debug_knee_effort.txt  debug_knee_q.txt  debug_knee_qdot.txt  input.txt  massID_cmd_theta.txt  massID_theta.txt  massID_torque.txt  output.txt  temperature.txt  time.txt
actuator_tutorial/: CMakeLists.txt  nodelet_plugins.xml  note.txt  package.xml
actuator_tutorial/include/actuator_tutorial/: actuator_nodelet.hpp
actuator_tutorial/launch/: actuator_nodelet.launch
actuator_tutorial/src/: actuator_nodelet.cpp
data_manager/: .gitignore  CMakeLists.txt  manifest.xml  save_data.sh  simulation_data_copy.sh
data_manager/include/data_manager/: DataManager.hpp  DataManager_Configuration.h  DataPythonSender.hpp  DataSave.hpp  data_protocol.h  dm_config.h.cmake
data_manager/launch/: param_tuning.launch
data_manager/plotting_octave/: AnkleKneeChirp.m  AnkleKneeJoint.m  AnkleKneeMassID.m  AnkleKneeStep.m  Joint.m  analysis_data_closed3D.m  analysis_data_general.m  analysis_ee_conf_3D.m  analysis_torque.m  chirp_analysis.m  chirp_exp.m  fn_add_path.m  force_ctrl.m  max_current.m  octave-workspace  step_test.m  step_test_torque.m  test.m  tmech.m  torque_calibration.m  torque_current_map.m
data_manager/plotting_octave/functions/: fn_butterworth_filter.m  fn_create_window.m  fn_latex_font_label.m  fn_latex_label.m  fn_low_pass_filter.m  fn_num_large_singular_value.m  fn_open_figure_window.m  fn_open_windows.m  fn_phase_chainging_frame.m  fn_pseudo_inv.m  fn_read_file.m  fn_read_matrix_file.m  fn_read_matrix_file_slow.m  fn_tightfig.m  fn_vel_filter.m  fn_wgn.m
data_manager/python/: data_sender.py
data_manager/src/: DataManager.cpp  DataReceiver.cpp  DataSave.cpp
params/: Medulla_V2.params  Medulla_V3.params  P2_nano_left.params  P2_nano_right.params  Sensillum_FT6_v1.params  lAnkle.params  lHipPitch.params  lHipRoll.params  lHipYaw.params  lKnee.params  rAnkle.params  rHipPitch.params  rHipRoll.params  rHipYaw.params  rKnee.params
see29/: params.yaml  synapse.csv
utils/: CMakeLists.txt  manifest.xml
utils/include/utils/: BSplineBasic.h  ParameterFetcher.hpp  Spline.h  utilities.hpp  wrap_eigen.hpp
utils/src/: LQR.cpp  Sejong_Thread.cpp  comm_udp.cpp  pseudo_inverse.cpp  utilities.cpp  wrap_eigen.cpp
utils/src/utils/srv/: __init__.py  _se2.py
